# desktop-ai-search

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  config.example.toml  dev.md  docker-compose.yml  search.db  tauri.conf.json  test_embeddings.db-shm  test_embeddings.db-wal  test_indexing.db  test_llm_flow.rs  test_search.rs
.github/workflows/: ci.yml  release.yml
docs/: README.md  api.md
examples/: test_database_embeddings.rs  test_document_embeddings.rs  test_document_indexing.rs  test_embeddings.rs  test_hybrid_search.rs  test_llm.rs  test_preference_learning.rs  test_query_improvements.rs  test_query_intent.rs  test_ranking_system.rs  test_real_embeddings.rs  test_result_processing.rs  test_search_suggestions.rs  test_session_management.rs  test_simple_database.rs  test_user_intelligence.rs
frontend/: developer.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  mock-api.ts
frontend/src/components/: FilterSidebar.tsx  IndexingPanel.tsx  KeyboardShortcutsModal.tsx  LoadingSkeleton.tsx  SearchBar.tsx  SearchInterface.tsx  SearchResults.tsx
frontend/src/stores/: keyboardStore.ts  searchStore.ts  themeStore.ts
frontend/src/types/: api.ts
scripts/: build.sh  ci.sh  deploy.sh  dev.sh
src/: app.rs  cli.rs  error.rs  lib.rs  main.rs  recovery.rs  test_boolean_logic.rs  test_clip.rs  test_contextual_search.rs  test_embeddings.rs  test_query_understanding.rs  test_screenshot.rs
src/cache/: embedding_cache.rs  mod.rs  model_cache.rs  query_cache.rs  search_cache.rs
src/commands/: ai.rs  cache.rs  embeddings.rs  files.rs  health.rs  indexing.rs  mod.rs  monitoring.rs  search.rs  search_v2.rs
src/config/: mod.rs
src/core/: adaptive_learning_engine.rs  advanced_query_processor.rs  audio_processor.rs  boolean_query_executor.rs  boolean_query_parser.rs  cached_query_classifier.rs  chunker.rs  clip_processor.rs  contextual_search_engine.rs  document_processor.rs  embedding_manager.rs  hybrid_search.rs  intelligent_query_processor.rs  llm_manager.rs  mod.rs  model_downloader.rs  ocr_processor.rs  preference_learning.rs  query_intent.rs  ranking.rs  result_processing.rs  screenshot_processor.rs  search_suggestions.rs  session_management.rs  text_extractor.rs  user_intelligence.rs
src/database/: migrations.rs  mod.rs  operations.rs
src/logging/: appenders.rs  filters.rs  formatters.rs  mod.rs  structured.rs
src/models/: mod.rs
src/monitoring/: alerts.rs  metrics.rs  mod.rs  performance.rs  telemetry.rs
src/security/: access_control.rs  audit.rs  encryption.rs  mod.rs  rate_limiting.rs  sanitization.rs  validation.rs
src/sql/: 001_initial_schema.sql  002_add_embeddings.sql  003_add_chunks.sql  004_add_indices.sql  005_enhanced_chunks_embeddings.sql  006_add_clip_embeddings.sql  007_add_fts5_chunks.sql
src/utils/: file_processor.rs  file_types.rs  file_watcher.rs  hashing.rs  metadata.rs  mod.rs
test_documents/: ai_research.txt  climate_science.txt  cooking_recipes.txt
test_files/: test.txt
