[package]
name = "desktop-ai-search"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
tauri = { version = "2.6.2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0"

# Database & Storage
rusqlite = { version = "0.36", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.30"

# File System & Monitoring
notify = "6.1"
walkdir = "2.0"
mime_guess = "2.0"

# Additional utilities
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"

# AI/ML dependencies 
# candle-core = "0.3"
# candle-nn = "0.3"
# candle-transformers = "0.3"
# tokenizers = "0.15"