[package]
name = "desktop-ai-search"
version = "0.1.0"
edition = "2021"
default-run = "desktop-ai-search"

[lib]
name = "desktop_ai_search"
path = "src/lib.rs"

[[bin]]
name = "desktop-ai-search"
path = "src/main.rs"

[[bin]]
name = "test_clip_with_model"
path = "src/bin/test_clip_with_model.rs"

[[bin]]
name = "test_screenshot_standalone"
path = "src/bin/test_screenshot_standalone.rs"

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
tauri = { version = "2.6.2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full", "time"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0"

# Database & Storage
rusqlite = { version = "0.36", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.30"

# File System & Monitoring
notify = "6.1"
walkdir = "2.0"
mime_guess = "2.0"
infer = "0.16"

# Additional utilities
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
md5 = "0.7"
dirs = "5.0"

# Document Processing
pdf-extract = "0.7"
zip = "0.6"
xml-rs = "0.8"
html2text = "0.12"
pulldown-cmark = "0.10"
regex = "1.10"

# OCR Processing
leptess = "0.14" # Tesseract bindings
image = "0.25"

# Audio/Speech Processing  
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
candle-examples = "0.8"
hf-hub = { version = "0.3", features = ["tokio"] }
tokenizers = "0.15"

# Audio format support
symphonia = { version = "0.5", features = ["all"] }
cpal = "0.15"

# LLM Integration
llama_cpp = "0.3.2"

# Model Management & Downloads
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"
url = "2.5"

# System Information for VRAM detection
sysinfo = "0.30"

# Caching for search results
lru = "0.12"
moka = { version = "0.12", features = ["future"] }
once_cell = "1.20"
lazy_static = "1.4"

# Image processing and CLIP

[dev-dependencies]
tempfile = "3.0"
